--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,7 @@ dependencies {
     compile group: 'com.google.protobuf', name: 'protobuf-java', version: '3.9.1'
     compile group: 'com.google.protobuf', name: 'protobuf-java-util', version: '3.9.1'
     compile group: 'org.apache.thrift', name: 'libthrift', version: '0.12.0'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
     compile (
             'io.grpc:grpc-netty-shaded:1.23.0',
             'io.grpc:grpc-protobuf:1.23.0',
